--- a/0826진도/grid/index.css
+++ b/0826진도/grid/index.css
@@ -1,20 +1,20 @@
 .grid {
   display: grid;
   /* grid 박스를 만든다 부모역할 */
-  grid-template-rows: 200px 200px;
+  /* grid-template-rows: 200px 200px; */
   /* grid 박스의 세로 높이를 결정한다. 
   row(행)의 수만큼 입력한다.*/
-  grid-template-columns: 100px 100px 100px;
+  /* grid-template-columns: 100px 300px 300px; */
   /* grid 박스의 가로 너비를 결정한다.
   column(열)의 수만큼 입력한다. */
-  grid-template-rows: repeat(2, 200px);
-  grid-template-columns: repeat(3, 100px);
+  /* grid-template-rows: repeat(2, 200px);
+  grid-template-columns: repeat(3, 100px); */
   grid-template-rows: repeat(3, 200px);
-  grid-template-columns: repeat(5, minmax(100px, 300px));
+  grid-template-columns: repeat(5, minmax(100px, 10px));
   /* grid-auto-flow: column; */
   /* grid의 아이템 진행방향을 설정. */
   /* grid-template-rows: repeat(2, minmax(100px, 300px)); */
-  /* grid-template-columns: repeat(5, 200px); */
+  /* grid-template-columns: repeat(5, 200px);
 
   /* minmax 함수는 최소 최대 결정, 그사이에서 알아서조정 */
   /* repeat 함수는 입력을 반복(개수,크기) */
@@ -23,22 +23,27 @@
   grid-template-areas:
     "sidebar header header header header"
     "sidebar content content content ."
-    "footer footer footer footer footer";
+    "sidebar footer footer footer footer";
   /* grid 박스로 설정함
     하나의 row(column 설정)는 ""로 설정하고, 여러 row일 경우 줄바꿈 처리
     .을 설정한 경우 빈칸 무조건 사각형이여야 한다.
     item의 스타일에 grid-area와 매칭한다. */
-  /* align-items: stretch;
+  /* ;
   align-items: start;
-  align-items: center;
+  
   align-items: end;
   세로 기준으로 위치를 결정
-  justify-items: stretch;
+  
   justify-items: start;
-  justify-items: center;
+  
   justify-items: end; 
   가로 기준으로 위치를 결정
   */
+  align-items: center;
+  justify-items: center;
+  background-color: burlywood;
+  align-items: stretch;
+  justify-items: stretch;
 }
 
 .grid-item {
@@ -57,6 +62,10 @@
 .header {
   grid-area: header;
   background-color: green;
+}
+.abc {
+  grid-area: abc;
+  background-color: blue;
 }
 .content {
   grid-area: content;
