--- a/0915/실습/index.css
+++ b/0915/실습/index.css
@@ -8,6 +8,7 @@
 }
 .gameDisplay {
   width: 50%;
+  /* height: 100%; */
   /* background-color: black; */
   margin: auto;
 }
@@ -47,6 +48,60 @@
   font-weight: bold;
 }
 
+.displayCenter {
+  width: 50%;
+  height: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.circle {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+
+  border-radius: 50%;
+  background-image: repeating-conic-gradient(
+    from 0deg,
+    red 0deg 24deg,
+    yellow 24deg 48deg,
+    blue 48deg 72deg
+  );
+}
+
+.circleS img {
+  display: flex;
+  margin: auto;
+  width: 100%;
+  height: 100%;
+}
+
+.circleC {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 80%;
+  width: 80%;
+  border-radius: 50%;
+  background-color: aqua;
+  z-index: 6;
+  overflow: hidden;
+}
+
+.circleS {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 80%;
+  width: 80%;
+  border-radius: 50%;
+  background-color: black;
+  z-index: 5;
+}
+
 .displaytop {
   width: 80%;
   height: 20%;
@@ -54,14 +109,18 @@
   justify-content: space-between;
 }
 
-.displaytop div {
+.displaytop .win {
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: aqua;
   opacity: 0.7;
 }
-
+.displaytop img {
+  opacity: 1;
+  width: 10vw;
+  height: 8vw;
+}
 .displaybottom {
   width: 80%;
   height: 20%;
@@ -92,7 +151,7 @@
 
 .gamefooter {
   width: 100%;
-  height: 50%;
+  height: 30%;
   display: flex;
   align-items: center;
   justify-content: space-evenly;
@@ -102,15 +161,20 @@
   width: 70%;
 }
 
-.displayoffRock {
+.displayoff {
   display: none;
 }
-.displayoffScissor {
-  display: none;
+
+.displaytop .displayOpacity {
+  background-color: blue;
+  opacity: 1;
 }
-.displayoffPaper {
-  display: none;
+
+.displaybottom .displayOpacity {
+  background-color: blue;
+  opacity: 1;
 }
+
 .displayonWin {
   opacity: 1;
 }
@@ -121,17 +185,7 @@
   opacity: 1;
 }
 
-.circle {
-  width: 40vw;
-  height: 40vw;
-  border: 5vw solid rgb(163, 151, 198);
-  border-radius: 50%;
-}
-
 .displayChoice {
-    width: 300px;
-    height: 300px;
-    ani
+  width: 300px;
+  height: 300px;
 }
-
-
