--- a/0919/index.css
+++ b/0919/index.css
@@ -3,6 +3,17 @@
   margin: 0;
   padding: 0;
 }
+
+body {
+  background-position: center;
+  background-size: contain;
+  background-image: linear-gradient(
+      rgba(255, 255, 255, 0.2),
+      rgba(255, 255, 255, 0.2)
+    ),
+    url("보노보노.jpg");
+  background-repeat: no-repeat;
+}
 .gameHeader button {
   font-size: 2vw;
 }
@@ -13,7 +24,7 @@
   margin: auto;
 }
 .gameHeader {
-  height: 20%;
+  height: 15%;
   display: flex;
   /* background-color: aqua; */
   justify-content: space-evenly;
@@ -34,15 +45,8 @@
 
 .gamebody {
   width: 100%;
-  height: 50%;
-  background-position: center;
-  background-size: contain;
-  background-image: linear-gradient(
-      rgba(255, 255, 255, 0.3),
-      rgba(255, 255, 255, 0.3)
-    ),
-    url("보노보노.jpg");
-  background-repeat: no-repeat;
+  height: 70%;
+  /* background-color: lightsalmon; */
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -59,7 +63,7 @@
   align-items: center;
   position: relative;
   /* background-color: black; */
-  max-width: 350px;
+  max-width: 300px;
 }
 
 .displayCenter::after {
@@ -74,14 +78,13 @@
   align-items: center;
   height: 100%;
   width: 100%;
-
   border-radius: 50%;
-  background-image: repeating-conic-gradient(
+  /* background-image: repeating-conic-gradient(
     from 0deg,
     red 0deg 24deg,
     yellow 24deg 48deg,
     blue 48deg 72deg
-  );
+  ); */
 }
 
 .circle:after {
@@ -130,17 +133,18 @@
   justify-content: center;
   align-items: center;
   background-color: aqua;
-  opacity: 0.5;
+  opacity: 0.4;
 }
 .displaytop #arrow img {
-  opacity: 1;
+  opacity: 0.8;
   width: 100%;
   height: 100%;
+  margin-top: 25;
 }
 
 .displaybottom {
   width: 80%;
-  height: 20%;
+  height: 15%;
   display: flex;
   justify-content: space-between;
 
@@ -152,7 +156,7 @@
   justify-content: center;
   align-items: center;
   background-color: aqua;
-  opacity: 0.5;
+  opacity: 0.4;
 }
 
 .coinImage img {
@@ -184,25 +188,10 @@
 
 .displaytop .displayOpacity {
   background-color: blue;
-  opacity: 1;
+  opacity: 0.8;
 }
 
 .displaybottom .displayOpacity {
   background-color: blue;
-  opacity: 1;
-}
-
-.displayonWin {
-  opacity: 1;
-}
-.displayonDraw {
-  opacity: 1;
-}
-.displayonLose {
-  opacity: 1;
-}
-
-.displayChoice {
-  width: 300px;
-  height: 300px;
+  opacity: 0.8;
 }
