--- a/0919/index.css
+++ b/0919/index.css
@@ -5,6 +5,17 @@
 }
 
 body {
+  background-color: lightblue;
+}
+
+.backgroundopacity {
+  width: 50%;
+  margin: auto;
+  background-color: white;
+  opacity: 1;
+}
+.gameBackground {
+  width: 100%;
   background-position: center;
   background-size: contain;
   background-image: linear-gradient(
@@ -13,22 +24,64 @@ body {
     ),
     url("보노보노.jpg");
   background-repeat: no-repeat;
+  margin: auto;
 }
 .gameHeader button {
+  width: 100%;
+  height: 100%;
   font-size: 2vw;
 }
 .gameDisplay {
-  width: 50%;
+  width: 100%;
   /* height: 100%; */
   /* background-color: black; */
   margin: auto;
 }
 .gameHeader {
+  /* border: 3px solid black; */
   height: 15%;
   display: flex;
   /* background-color: aqua; */
   justify-content: space-evenly;
   align-items: center;
+  overflow: hidden;
+}
+
+/* .gameHeader div {
+  width: 100%;
+  height: 100%;
+  border: 1px solid black;
+} */
+
+.divide1 {
+  width: 20%;
+  height: 100%;
+  border: 1px solid black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.divide2 {
+  width: 70%;
+  height: 100%;
+  border: 1px solid black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.userCoin {
+  width: 100%;
+  margin-left: 20;
+  font-size: 6vw;
+  text-align: left;
+}
+
+.divide3 {
+  width: 10%;
+  height: 100%;
+  border: 1px solid black;
 }
 
 /* .gamefooter button{
@@ -37,15 +90,20 @@ body {
 
 .coinImage {
   display: flex;
-  width: 20%;
+  width: 60%;
 
   /* justify-content: center; */
   /* align-items: center; */
 }
 
+.coinImage img {
+  width: 100%;
+  height: 100%;
+}
+
 .gamebody {
   width: 100%;
-  height: 70%;
+  height: 65%;
   /* background-color: lightsalmon; */
   display: flex;
   flex-direction: column;
@@ -54,6 +112,8 @@ body {
   color: white;
   font-size: 3vw;
   font-weight: bold;
+  border-left: 1px solid black;
+  border-right: 1px solid black;
 }
 
 .displayCenter {
@@ -138,8 +198,7 @@ body {
 .displaytop #arrow img {
   opacity: 0.8;
   width: 100%;
-  height: 100%;
-  margin-top: 25;
+  height: 90%;
 }
 
 .displaybottom {
@@ -159,27 +218,28 @@ body {
   opacity: 0.4;
 }
 
-.coinImage img {
-  width: 60%;
-  height: 60%;
-}
-
-.userCoin {
-  width: 60%;
-  font-size: 8vw;
-  text-align: left;
-}
-
 .gamefooter {
+  /* border: 1px solid black; */
   width: 100%;
-  height: 30%;
+  height: 20%;
   display: flex;
   align-items: center;
   justify-content: space-evenly;
 }
 
 .gamefooter img {
-  width: 70%;
+  width: 100%;
+  height: 100%;
+}
+.gamefooter div {
+  width: 100%;
+  height: 100%;
+  border: 1px solid black;
+}
+
+.selectButton button {
+  width: 100%;
+  height: 100%;
 }
 
 .displayoff {
@@ -194,4 +254,17 @@ body {
 .displaybottom .displayOpacity {
   background-color: blue;
   opacity: 0.8;
+}
+
+.roulette {
+  font-size: 2vw;
+  color: blue;
+
+  position: absolute;
+  padding-bottom: 45%;
+  margin-bottom: 60%;
+  transform-origin: bottom;
+  clip-path: polygon(0 0, 50% 100%, 100% 0);
+  width: 23%;
+  text-align: center;
 }
