--- a/1006유튜브/index.css
+++ b/1006유튜브/index.css
@@ -183,6 +183,7 @@ button {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin-top: 10;
 }
 .sideContainer img {
   width: 50%;
@@ -201,7 +202,7 @@ button {
   display: flex;
   flex-wrap: nowrap;
   /* background-color: purple; */
-  height: 55px;
+  height: 70px;
   border-top: 1px solid rgba(0, 0, 0, 0.2);
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   align-items: center;
@@ -234,9 +235,197 @@ button {
   margin: 5 10;
 }
 
-.mainVideo {
+.videoBar {
+  width: 100%;
   position: relative;
   top: 111px;
   left: 60px;
+  margin-top: 100;
+  margin-left: 20;
   background-color: yellow;
+}
+
+.videoTopContainer {
+  display: flex;
+  width: 100%;
+  max-width: 2500px;
+  height: 650px;
+  background-color: blueviolet;
+  flex-wrap: wrap;
+  margin-top: 100px;
+  margin: auto;
+  margin-left: 12;
+}
+
+.normalVideoItem {
+  max-width: 330px;
+  width: 28%;
+
+  height: 40%;
+  min-height: 273px;
+  background-color: aqua;
+  /* border: 1px solid black; */
+  margin-top: 40;
+  margin-left: 25;
+  cursor: pointer;
+}
+
+/* .normalVideoItem:hover {
+  cursor: default;
+} */
+
+.normalVideoItem:hover .hiddenSetting {
+  display: block;
+}
+
+.thumbNail {
+  width: 100%;
+  height: 60%;
+}
+
+.thumbNail img {
+  width: 100%;
+  height: 100%;
+}
+
+.videoFlexBox {
+  width: 100%;
+  display: flex;
+  /* margin-top: 10; */
+  height: 40%;
+}
+
+.userProfile {
+  width: 20%;
+  height: 50%;
+}
+.userProfile img {
+  width: 100%;
+  height: 100%;
+}
+
+/* 텍스트 */
+.videoInfo {
+  width: 70%;
+  height: 100%;
+  margin-top: 5;
+}
+
+.videoTitleText {
+  padding-top: 3px;
+  font-size: 18px;
+  width: 90%;
+  height: 45%;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  word-break: break-word;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
+
+.videoInfoFooter {
+  margin-top: 10px;
+  height: 42%;
+  /* display: flex; */
+  font-size: 13px;
+  color: lightgray;
+}
+
+.viewUpdate {
+  display: flex;
+}
+
+.hiddenSetting {
+  width: 10%;
+  height: 35px;
+  border-radius: 70%;
+  overflow: hidden;
+  margin-top: 8px;
+  display: none;
+}
+
+.hiddenSetting img {
+  width: 100%;
+  height: 100%;
+}
+.start {
+  scale: 1.2;
+  z-index: 100;
+  width: 100%;
+  height: 40%;
+  cursor: pointer;
+  /* background-color: black; */
+}
+.start .hiddenfooter {
+  display: block;
+}
+/* .start::after {
+  cursor: pointer;
+} */
+.start .thumbNail img {
+  display: none;
+}
+
+.hiddenvideo {
+  display: none;
+}
+.start .hiddenvideo video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.start .hiddenvideo {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+
+.hiddenfooter {
+  display: none;
+}
+
+.start .hiddenfooter {
+  width: 100%;
+  height: 40%;
+  background-color: white;
+  text-align: center;
+  /* display: none; */
+  /* cursor: pointer; */
+}
+
+.hiddenfooter .container {
+  width: 90%;
+  height: 40%;
+  margin: auto;
+  display: flex;
+  border: 1px solid black;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(211, 211, 211, 0.5);
+  opacity: 0.7;
+  margin-top: 10;
+}
+
+.hiddenfooter div img {
+  width: 10%;
+  height: 50%;
+}
+
+.hiddenfooter div div {
+  height: 40%;
+  margin-left: 15;
+}
+
+@media screen and (max-width: 1400px) {
+  .categoryBar {
+    justify-content: left;
+  }
+}
+
+@media screen and (max-width: 2200px) {
+  .normalVideoItem:nth-child(12) {
+    display: none;
+  }
 }
